--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>All About Flutter</h1>
+    <p>Flutter merupakan framework yang diciptakan oleh Google tahun 2018 yang mampu menghasilkan aplikasi cross-platform.</p>
 </body>
 </html>
